[build-system]
build-backend = "flit_scm:buildapi"
requires = ["flit_core>=3.2", "flit_scm", "wheel"]

[project]
name = "xregistry"
dynamic = ["version"]
authors = [
    { name = "Clemens Vasters", email = "clemensv@microsoft.com"}
]
description = "A command-line tool for xRegistry with code generation for messaging and eventing applications"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jinja2>=3.1.4",
    "jsonpointer>=3.0.0",
    "pytest>=8.2.2",
    "pandas>=2.2.2",
    "pyyaml>=6.0.1",
    "jsonschema>=4.22.0",
    "pydot>=2.0.0",
    "anytree>=2.12.1",
    "avrotize>=2.16.0",
    "avro>=1.11.3",
    "toml>=0.10.2",
    "platformdirs>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "testcontainers>=4.8.2",
    "pytest>=8.3.3"
]

[project.scripts]
xregistry = "xregistry.cli:main"
xcg = "xregistry.cli:main"

[tool.setuptools_scm]
write_to = "xregistry/_version.py"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"